--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     <script src="/assets/heibukayuk/script.js"></script>
 
     <script type="text/javascript">
-        async function jawab() { await swals.fire('Kirim pesan ke WhatsApp aku, ya!'); window.location = "https://api.whatsapp.com/send?phone=&text=" + pesanwhatsapp; }
-
+        
         async function pertama() {
         audio = new Audio('/assets/music/almostday.mp3'); setTimeout(showDiv, 100);
         } pertama();
@@ -87,8 +86,8 @@
             imageUrl: '' + fotoakhir5.src,
         });
 
-        katangetik = "Oh iyaa, aku cuma mau bilang:<br>Kamu ngga boleh sedih yaa!!!<br><br>Gaboleh nyerah kalau<br>ada masalah yaa.. 🥰";
-        katangetik2 = "i'm always support you! ✨<br>";
+        katangetik = "Oh iyaa, aku cuma mau bilang:<br>Kamu ngga boleh sedih yaa!!<br><br>Gaboleh nyerah kalau<br>ada masalah yaa.. 🥰<br>oia bunda lagi istirahat ya entr juga dia balik lagi ketele:)";
+        katangetik2 = "doain bunda aja biar cepet sembuh ✨<br>";
 
         pesanwhatsapp = "aww";
         setTimeout(kpemb, 200);
