--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="/assets/heibukayuk/style.css" rel="stylesheet" type="text/css" />
 
     <head>
-    <title>Hayy Nama Dia</title>
+    <title>aloo kamuu</title>
     </head>
 
     <body>
@@ -34,7 +34,7 @@
         <!-- Surat -->
         <img src="/assets/images/envelope.png" />
         </div>
-        <p id="ket">Klik Suratnya!</p>
+        <p id="ket">di klik Suratnya!</p>
 
         <div>
             <!-- Foto Akhir -->
@@ -66,7 +66,7 @@
 
         async function pesan() {
         await swalst.fire({
-            title: 'Heyy Nama Dia! 😍',
+            title: 'aloo kamu! 😍',
             imageUrl: '' + fotoakhir1.src,
         });
         await swalst.fire({
